<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/card_menu_add_new_card"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/card_menu_add_new_card"/>
    <item
        android:id="@+id/card_menu_remove_current_card"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/card_menu_remove_current_card"/>
    <item
        android:id="@+id/card_menu_view_all"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/card_menu_view_all"/>
    <item
        android:id="@+id/card_menu_view_not_answered"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/card_menu_view_not_answered"/>
    <item
        android:id="@+id/card_menu_view_correct"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/card_menu_view_correct"/>
    <item
        android:id="@+id/card_menu_view_wrong"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/card_menu_view_wrong"/>
    <item
        android:id="@+id/card_menu_show_previous"
        android:orderInCategory="106"
        android:showAsAction="never"
        android:title="@string/card_menu_show_previous"/>
    <item
        android:id="@+id/card_menu_shuffle"
        android:orderInCategory="107"
        android:showAsAction="never"
        android:title="@string/card_menu_shuffle"/>
    <item
        android:id="@+id/card_menu_reset"
        android:orderInCategory="107"
        android:showAsAction="never"
        android:title="@string/card_menu_reset"/>

</menu>