<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/main_menu_new_deck"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/main_menu_new_deck"/>
    <item
        android:id="@+id/main_menu_edit_list"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/main_menu_edit_list"/>
    <item
        android:id="@+id/main_menu_delete"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/main_menu_delete"/>
    <item
        android:id="@+id/main_menu_cancel_edit"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/main_menu_cancel_edit"/>

</menu>