<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/question_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/question_input"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/question_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/question_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/question_label"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/answer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answer_input"
        android:layout_below="@+id/question_label"
        android:layout_marginTop="116dp"
        android:text="@string/answer_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/answer_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/question_input"
        android:layout_alignRight="@+id/question_input"
        android:layout_below="@+id/answer_label"
        android:ems="15"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/create_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answer_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/create_card" />

</RelativeLayout>