<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	 xmlns:android="http://schemas.android.com/apk/res/android"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
	    android:focusable="true"
	    android:focusableInTouchMode="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
		    android:focusable="true"
		    android:padding="5dp"
		    android:focusableInTouchMode="true"  >

            <TextView
                android:id="@+id/question_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/question_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/question_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:scrollbars="vertical" 
                android:focusableInTouchMode="true" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
		    android:padding="5dp"
		    android:focusable="true"
		    android:focusableInTouchMode="true" >

            <TextView
                android:id="@+id/answer_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/answer_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/answer_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:scrollbars="vertical" >
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/create_card_gallary_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.fyodorwolf.studybudy.ui.HorizontalListView
                android:id="@+id/photo_list_view"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

        </TableRow>

        <TableRow
            android:id="@+id/TableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="5dp" >

            <Button
                android:id="@+id/add_images"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/add_images" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
		    android:focusable="true"
		    android:padding="5dp"
		    android:focusableInTouchMode="true" >

            <Button
                android:id="@+id/create_card"
				android:layout_width="fill_parent"
				android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/create_card"/>

        </TableRow>

    </LinearLayout>
</ScrollView>