<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	 xmlns:android="http://schemas.android.com/apk/res/android"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
	    android:focusable="true"
	    android:focusableInTouchMode="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
		    android:focusable="true"
		    android:padding="5dp"
		    android:focusableInTouchMode="true"  >

            <TextView
                android:id="@+id/subject_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/subject_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/deck_group_select"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
    			android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:id="@+id/group_name_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="5dp" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/subject_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/deck_group_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true" 
                android:inputType="text"
                android:singleLine="true"
                android:scrollbars="vertical" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
		    android:padding="5dp"
		    android:focusable="true"
		    android:focusableInTouchMode="true" >

            <TextView
                android:id="@+id/deck_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/deck_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/deck_name_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:scrollbars="vertical" >
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
		    android:focusable="true"
		    android:padding="5dp"
		    android:focusableInTouchMode="true" >

            <Button
                android:id="@+id/create_deck"
				android:layout_width="fill_parent"
				android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/create_deck"/>

        </TableRow>

    </LinearLayout>
</ScrollView>